fix(carousel): adjust spacing on the lightbox to match production

--- a/packages/styles/scss/components/lightbox-media-viewer/_lightbox-media-viewer.scss
+++ b/packages/styles/scss/components/lightbox-media-viewer/_lightbox-media-viewer.scss
@@ -89,6 +89,7 @@
     @include carbon--breakpoint('lg') {
       display: flex;
       flex-direction: column;
+      padding: 0;
     }
 
     .#{$prefix}--lightbox-media-viewer__row {
